# family-chart

./: .gitignore  ALGORITHMS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yml
data/: sample_families_only.gv  sample_people_only.gv  sample_relationships_only.gv  stuart_family.gv
family_chart/: block.py  constants.py  family.py  family_tree.py  family_wrapper.py  graph_settings.py  gv_parser.py  gv_renderer.py  organizer.py  origin_wrapper.py  page_layout.py  person.py  person_wrapper.py  relationship.py  row.py  svg_component.py  svg_family.py  svg_person.py  svg_row_layout.py  text_line.py  utils.py
test/: conftest.py  test_block.py  test_gv_parser.py  test_gv_renderer.py  test_organizer.py  test_page_layout.py  test_person_wrapper.py  test_row.py  test_svg_component.py  test_svg_family.py  test_svg_person.py  test_svg_row_layout.py  test_utils.py
