[project]
name = "family-chart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "9.0"
addopts = "--cov=family_chart --cov-report=term-missing --cov-config=pyproject.toml --cov-report=html:build/coverage --cov-report=xml:build/coverage/coverage.xml"
testpaths = [
    "test",
]

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.ruff.lint]
select = [
    "ASYNC", # ASYNC
    "B", # flake8-bugbear
    "C", # Code issues
    "E",  # pycodestyle
    "D", # flake8-docstrings
    "F", # Pyflakes
    "FAST", # fast
    # "G", # Log formatting,
    "I", # isort
    "ICN", # flake8-import-conventions
    "LOG",
    "PIE", # pytest
    "PLC", # pylint rules
    "PT", # pytest
    "Q", # Quotes
    "SIM", # flake8-simplify
    "T", # flake8-print
    "UP", # pyupgrade
]
ignore = ["D104", "D203", "D212", "PT011"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D"]

[tool.ruff.lint.isort]
known-third-party = []

[tool.black]
line-length = 120
target-version = ['py312']
